Updating our information tags with relevant personal information

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Michael Rohmann</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi! Im Mike and Welcome to this breif page all about me!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Branchburg, NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy playing golf, video games, cooking for friends and family, and working on my car!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My Dream job is to work as a penetration tester within the cybersecurity sector</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I Currently live in Branchburg, New Jersey</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer to further my knowledge of coding systems and understand more about how they work so that their systems can be exploited.</p>
     </section>
 
     <footer id="footer">
